6/17/14 #33 disable the 'Check' button in the game when all coefficients are zero
6/17/14 #42 add missing entries in images/license.txt
6/17/14 #22 remove unused strings from balancing-chemical-equations_en.strings
# 1.0.0-dev.2 6/16/14
6/16/14 #17 use default "Start Over" for button label on scoreboard
# 1.0.0-dev.1 6/16/14
6/3/14 #13 stroke atoms
3/20/14 port images and strings from Java SVN repository
3/20/14 create basic directory structure and top-level files
3/20/14 created GitHub repository